Improve visibility when sorting table columns + fix being able to put whitespace as a custom column

--- a/public/css/lrr.css
+++ b/public/css/lrr.css
@@ -92,6 +92,13 @@ table thead .sorting_desc a:after {
   top: -10px;
 }
 
+table thead .sorting_disabled a:after {
+  border-top: none;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+}
+
 .paginate_button.previous {
   display: none;
 }
