--- a/public/themes/g.css
+++ b/public/themes/g.css
@@ -27,6 +27,13 @@ a:hover {
     color: #9B4E03;
 }
 
+.sorting_asc>a, .sorting_desc>a {
+    color: #9B4E03;
+}
+.sorting_asc>a:hover, .sorting_desc>a:hover {
+    color: #5C0D11;
+}
+
 p.ip {
     clear: both;
     margin: -3px auto;
